--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
         "react-detect-offline": "^2.4.5",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
+        "react-particles": "^2.6.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.3",
         "react-scripts": "5.0.1",
+        "sweetalert2": "^11.6.15",
+        "sweetalert2-react-content": "^5.0.7",
+        "tsparticles": "^2.6.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
